temp_node_modules/gulp-handlebars/test/expected/Error.txt
Parse error on line 1:
...syntax error: {{foo }}}
-----------------------^
Expecting 'CLOSE', got 'CLOSE_UNESCAPED'